🔥 Update assets file for windows and mac

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -2,10 +2,10 @@
     <qresource prefix="/assets">
         <file>logos/logo.svg</file>
         <file>logos/github.svg</file>
-        <file>logos/watchflower.svg</file>
-        <file>logos/watchflower_tray_light.svg</file>
-        <file>logos/watchflower_tray_dark.svg</file>
-        <file>logos/watchflower_monochrome.svg</file>
+        <file>logos/blume.svg</file>
+        <file>logos/blume_tray_light.svg</file>
+        <file>logos/blume_tray_dark.svg</file>
+        <file>logos/blume_monochrome.svg</file>
 
         <file>menus/menu_logo_large.svg</file>
         <file>menus/menu_back.svg</file>
