--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -6,18 +6,15 @@
         <file>logos/blume_tray_light.svg</file>
         <file>logos/blume_tray_dark.svg</file>
         <file>logos/blume_monochrome.svg</file>
-
         <file>menus/menu_logo_large.svg</file>
         <file>menus/menu_back.svg</file>
         <file>menus/menu_close.svg</file>
         <file>menus/menu_infos.svg</file>
-
         <file>tutorial/welcome-devices.svg</file>
         <file>tutorial/welcome-bluetooth-searching.svg</file>
         <file>tutorial/welcome-app-connected.svg</file>
         <file>tutorial/welcome-limits.svg</file>
         <file>tutorial/welcome-plants.svg</file>
-
         <file>icons_fontawesome/lungs-solid.svg</file>
         <file>icons_custom/duotone-date_all-24px.svg</file>
         <file>icons_custom/duotone-plant_care-24px.svg</file>
@@ -32,7 +29,6 @@
         <file>icons_custom/pot_flower-24px.svg</file>
         <file>icons_custom/thermometer-24px.svg</file>
         <file>icons_custom/thermometer_big-24px.svg</file>
-
         <file>icons_material/baseline-ac_unit-24px.svg</file>
         <file>icons_material/baseline-add-24px.svg</file>
         <file>icons_material/baseline-air-24px.svg</file>
@@ -93,7 +89,6 @@
         <file>icons_material/baseline-tonality-24px.svg</file>
         <file>icons_material/baseline-trip_origin-24px.svg</file>
         <file>icons_material/baseline-warning-24px.svg</file>
-
         <file>icons_material/outline-add_circle-24px.svg</file>
         <file>icons_material/outline-info-24px.svg</file>
         <file>icons_material/outline-local_florist-24px.svg</file>
@@ -102,7 +97,6 @@
         <file>icons_material/outline-remove_circle-24px.svg</file>
         <file>icons_material/outline-settings_remote-24px.svg</file>
         <file>icons_material/outline-settings-24px.svg</file>
-
         <file>icons_material/duotone-bluetooth_connected-24px.svg</file>
         <file>icons_material/duotone-bluetooth_searching-24px.svg</file>
         <file>icons_material/duotone-brightness_4-24px.svg</file>
@@ -136,5 +130,14 @@
         <file>icons_material/duotone-water_full-24px.svg</file>
         <file>icons_material/duotone-water_mid-24px.svg</file>
         <file>icons_material/duotone-wb_sunny-24px.svg</file>
+        <file>icons_custom/plant_scan.png</file>
+        <file>icons_custom/posometre.svg</file>
+        <file>icons_custom/thumbs.png</file>
+        <file>img/cactus.jpg</file>
+        <file>img/feuillage.jpg</file>
+        <file>img/fleure.jpg</file>
+        <file>img/herbe.jpeg</file>
+        <file>img/legume.jpg</file>
+        <file>img/orchidee.jpg</file>
     </qresource>
 </RCC>
