--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -32,6 +32,7 @@
         <file>components/Icons.qml</file>
         <file>components/NiceButton.qml</file>
         <file>components/ClipRRect.qml</file>
+        <file>components/AppBarButton.qml</file>
     </qresource>
     <qresource prefix="/js">
         <file alias="UtilsNumber.js">components_js/UtilsNumber.js</file>
@@ -41,5 +42,6 @@
     </qresource>
     <qresource prefix="/">
         <file>components/NiceButton.qml</file>
+        <file>components/AppBarButton.qml</file>
     </qresource>
 </RCC>
