Add custom plant detail screen after identification

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -65,6 +65,7 @@
         <file>PlantIdentifier.qml</file>
         <file>PosometreDialog.qml</file>
         <file>popups/PopupLocationNotification.qml</file>
+        <file>PlantIdentifierDetails.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
