--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -66,6 +66,7 @@
         <file>PosometreDialog.qml</file>
         <file>popups/PopupLocationNotification.qml</file>
         <file>PlantIdentifierDetails.qml</file>
+        <file>PlantDeseaseDetails.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
