✨ Add multple fix

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -58,6 +58,7 @@
         <file alias="ItemNoDeviceNearby.qml">components/ItemNoDeviceNearby.qml</file>
         <file alias="ItemNoPermission.qml">components/ItemNoPermission.qml</file>
         <file alias="ItemNoPlant.qml">components/ItemNoPlant.qml</file>
+        <file alias="NiceButton.qml">components/NiceButton.qml</file>
         <file alias="ItemNoPlants.qml">components/ItemNoPlants.qml</file>
         <file alias="ItemNoJournal.qml">components/ItemNoJournal.qml</file>
         <file alias="SectionTitle.qml">components/SectionTitle.qml</file>
