🐛 Fix UI troubles for plant details

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -63,6 +63,7 @@
         <file alias="ItemNoJournal.qml">components/ItemNoJournal.qml</file>
         <file alias="SectionTitle.qml">components/SectionTitle.qml</file>
         <file alias="Accordion.qml">components/Accordion.qml</file>
+        <file alias="TableLine.qml">components/TableLine.qml</file>
         <file>PlantDesease.qml</file>
         <file>PlantIdentifier.qml</file>
         <file>PosometreDialog.qml</file>
