--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -34,6 +34,8 @@
         
         <file>pages/Plant/PlantIdentifier.qml</file>
         <file>pages/Plant/PlantIdentifierDetails.qml</file>
+        <file>pages/Plant/PlantDesease.qml</file>
+        <file>pages/Plant/PlantDeseaseDetails.qml</file>
         
         <file alias="PopupBackgroundUpdates.qml">popups/PopupBackgroundUpdates.qml</file>
         <file alias="PopupBlacklistDevice.qml">popups/PopupBlacklistDevice.qml</file>
@@ -70,10 +72,8 @@
         <file alias="Accordion.qml">components/Accordion.qml</file>
         <file alias="TableLine.qml">components/TableLine.qml</file>
         <file alias="ImagePickerArea.qml">components/ImagePickerArea.qml</file>
-        <file>PlantDesease.qml</file>
         <file>PosometreDialog.qml</file>
         <file>popups/PopupLocationNotification.qml</file>
-        <file>PlantDeseaseDetails.qml</file>
         <file>PlantBrowseCategory.qml</file>
         <file>PlantScreenDetails.qml</file>
         <file>FAQ.qml</file>
