--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -32,10 +32,16 @@
         <file>ThemeEngine.qml</file>
         <file>WindowGeometrySaver.qml</file>
         
+        <file>pages/Insect/InsectIdentifier.qml</file>
+
         <file>pages/Plant/PlantIdentifier.qml</file>
         <file>pages/Plant/PlantIdentifierDetails.qml</file>
         <file>pages/Plant/PlantDesease.qml</file>
         <file>pages/Plant/PlantDeseaseDetails.qml</file>
+
+        <file>pages/Faq.qml</file>
+        <file>pages/AskHelp.qml</file>
+
         
         <file alias="PopupBackgroundUpdates.qml">popups/PopupBackgroundUpdates.qml</file>
         <file alias="PopupBlacklistDevice.qml">popups/PopupBlacklistDevice.qml</file>
@@ -69,16 +75,25 @@
         <file alias="ItemNoPlants.qml">components/ItemNoPlants.qml</file>
         <file alias="ItemNoJournal.qml">components/ItemNoJournal.qml</file>
         <file alias="SectionTitle.qml">components/SectionTitle.qml</file>
-        <file alias="Accordion.qml">components/Accordion.qml</file>
         <file alias="TableLine.qml">components/TableLine.qml</file>
-        <file alias="ImagePickerArea.qml">components/ImagePickerArea.qml</file>
+
         <file>PosometreDialog.qml</file>
         <file>popups/PopupLocationNotification.qml</file>
         <file>PlantBrowseCategory.qml</file>
         <file>PlantScreenDetails.qml</file>
-        <file>FAQ.qml</file>
+
+        <file>components/Accordion.qml</file>
+        <file>components/ImagePickerArea.qml</file>
 
         <file>components_js/Http.js</file>
+
+
+        <file>components_generic/ActionMenuItem.qml</file>
+        <file>components_generic/ButtonCompactable.qml</file>
+        <file>components_generic/RoundButtonIcon.qml</file>
+        <file>components_generic/ButtonWireframe.qml</file>
+        <file>components_generic/ButtonWireframeIcon.qml</file>
+        <file>components_generic/ButtonWireframeIconCentered.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
