--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -13,6 +13,7 @@
         <file alias="IconSvg.qml">components_generic/IconSvg.qml</file>
         <file>components_generic/IconSvg.qml</file>
         <file alias="ItemTag.qml">components_generic/ItemTag.qml</file>
+        <file>components_generic/ItemTag.qml</file>
         <file alias="MobileMenuItem_horizontal.qml">components_generic/MobileMenuItem_horizontal.qml</file>
         <file alias="ProgressArc.qml">components_generic/ProgressArc.qml</file>
         <file alias="ProgressCircle.qml">components_generic/ProgressCircle.qml</file>
