--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -30,6 +30,10 @@
         <file>DeviceEnvironmental.qml</file>
         <file>ThemeEngine.qml</file>
         <file>WindowGeometrySaver.qml</file>
+
+        <!-- UTILITY OBEJCT -->
+
+        <file>NavigationPage.qml</file>
         
         <!-- PAGE - INSECT -->
         <file>pages/Insect/InsectIdentifier.qml</file>
@@ -46,8 +50,11 @@
 
         <!-- OTHER PAGE -->
 
+        <file>pages/Posometre.qml</file>
         <file>pages/Faq.qml</file>
         <file>pages/AskHelp.qml</file>
+
+        <!-- END OTHER PAGE -->
 
         <file alias="PopupBackgroundUpdates.qml">popups/PopupBackgroundUpdates.qml</file>
         <file alias="PopupBlacklistDevice.qml">popups/PopupBlacklistDevice.qml</file>
@@ -83,7 +90,6 @@
         <file alias="SectionTitle.qml">components/SectionTitle.qml</file>
         <file alias="TableLine.qml">components/TableLine.qml</file>
 
-        <file>PosometreDialog.qml</file>
         <file>popups/PopupLocationNotification.qml</file>
         <file>PlantBrowseCategory.qml</file>
         <file>PlantScreenDetails.qml</file>
