--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -91,16 +91,12 @@
         <file>components_generic/BPage.qml</file>
         <file>components_generic/ToolTipFlat.qml</file>
         <file>components_generic/RoundButtonIcon.qml</file>
-
-
-        <!-- SERVICES -->
         <file>services/SqlClient.qml</file>
-
-        <!-- DATABASE MODEL -->
         <file>models/AlarmModel.qml</file>
         <file>models/Model.qml</file>
         <file>models/PlantModel.qml</file>
         <file>models/SpaceModel.qml</file>
+        <file>pages/Insect/InsectDetailsScreen.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
