--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -111,6 +111,7 @@
         <file>models/Model.qml</file>
         <file>models/PlantModel.qml</file>
         <file>models/SpaceModel.qml</file>
+        <file>models/ModelManager.qml</file>
 
     </qresource>
     <qresource prefix="/">
