--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -35,6 +35,8 @@
         <file>components/AppBarButton.qml</file>
         <file>components/AppBar.qml</file>
         <file>components/ItemNoImage.qml</file>
+        <file>components_generic/Alert.qml</file>
+        <file>NotAuthenticated.qml</file>
     </qresource>
     <qresource prefix="/js">
         <file alias="Http.js">components_js/Http.js</file>
