--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -42,6 +42,8 @@
         <file>components_generic/Alert.qml</file>
         <file>NotAuthenticated.qml</file>
         <file>components/BottomTabBar.qml</file>
+        <file>components/SearchPlants.qml</file>
+        <file>components/SpaceSearchPopup.qml</file>
     </qresource>
     <qresource prefix="/js">
         <file alias="Http.js">components_js/Http.js</file>
