--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -82,18 +82,11 @@
         <file>popups/PopupLocationNotification.qml</file>
         <file>PlantBrowseCategory.qml</file>
         <file>PlantScreenDetails.qml</file>
-
-        <!-- Plant Search popup -->
-
         <file>components/Accordion.qml</file>
         <file>components/FormGroup.qml</file>
         <file>components/ImagePickerArea.qml</file>
-
         <file>components/PlantSearchPopup.qml</file>
-        <!-- End plant search popup -->
-
         <file>components_js/Http.js</file>
-
         <file>components_generic/ActionMenuItem.qml</file>
         <file>components_generic/ButtonCompactable.qml</file>
         <file>components_generic/ButtonWireframe.qml</file>
@@ -102,26 +95,20 @@
         <file>components_generic/BPage.qml</file>
         <file>components_generic/ToolTipFlat.qml</file>
         <file>components_generic/RoundButtonIcon.qml</file>
-
         <file>pages/Garden/GardenSpaceDetails.qml</file>
-
-        <!-- Object -->
         <file>components_js/Http.js</file>
         <file>components_js/Utils.js</file>
         <file>components_js/Colors.qml</file>
-
-        <!-- SERVICES -->
-
         <file>services/SqlClient.qml</file>
         <file>models/AlarmModel.qml</file>
         <file>models/Model.qml</file>
         <file>models/PlantModel.qml</file>
         <file>models/SpaceModel.qml</file>
         <file>models/ModelManager.qml</file>
-
         <file>pages/Insect/InsectDetailsScreen.qml</file>
         <file>pages/Auth/Login.qml</file>
         <file>pages/Auth/Register.qml</file>
+        <file>pages/Garden/AlarmsCalendar.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
