--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -44,6 +44,7 @@
         <file>components/BottomTabBar.qml</file>
         <file>components/SearchPlants.qml</file>
         <file>components/SpaceSearchPopup.qml</file>
+        <file>components/BottomTabDevices.qml</file>
     </qresource>
     <qresource prefix="/js">
         <file alias="Http.js">components_js/Http.js</file>
