--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -114,6 +114,7 @@
         <file>pages/Plant/PlantShortDescriptions.qml</file>
         <file>pages/Plant/Plant.qml</file>
         <file>pages/Plant/PlantFrequencies.qml</file>
+        <file>pages/Garden/GardenEditSpace.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
