--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -7389,6 +7389,10 @@
         <file>tutorial/api-identity.svg</file>
         <file>tutorial/api-health-status.svg</file>
         <file>icons_material/camera.svg</file>
+        <file>icons_custom/menubottom_garden.svg</file>
+        <file>icons_custom/menubottom_plants.svg</file>
+        <file>icons_custom/menubottom_health.svg</file>
+        <file>icons_custom/menubottom_devices.svg</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
