--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -7403,6 +7403,10 @@
         <file>img/plant_pot.png</file>
         <file>icons_custom/tulipe_left.svg</file>
         <file>icons_custom/tulipe_right.svg</file>
+        <file>img/welcome.svg</file>
+        <file>tutorial/sensors.svg</file>
+        <file>tutorial/welcome-recognize-disease.svg.png</file>
+        <file>tutorial/welcome-plant-green-pot.png</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
