--- a/qml/components.qrc
+++ b/qml/components.qrc
@@ -48,6 +48,7 @@
         <file>components/SpaceSearchPopup.qml</file>
         <file>components/BottomTabDevices.qml</file>
         <file>components/FullScreenPopup.qml</file>
+        <file>pages/Garden/GardenSpaceLinePreview.qml</file>
     </qresource>
     <qresource prefix="/js">
         <file alias="Http.js">components_js/Http.js</file>
