--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -124,6 +124,8 @@
         <file>pages/TutorialNew.qml</file>
         <file>pages/Device/DeviceScanPage.qml</file>
         <file>components/WeatherCard.qml</file>
+        <file>pages/Plant/DetailsLineScreen.qml</file>
+        <file>pages/Plant/PlantFlowerchecker.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>PosometreDialog.qml</file>
